--- a/tensorflow/lite/micro/BUILD
+++ b/tensorflow/lite/micro/BUILD
@@ -1,7 +1,10 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 load(
     "//tensorflow/lite/micro:build_def.bzl",
-    "micro_copts",
+    "tflm_cc_binary",
+    "tflm_cc_library",
+    "tflm_cc_test",
+    "tflm_copts",
 )
 
 package(
@@ -18,15 +21,14 @@ package_group(
     packages = ["//tensorflow/lite/micro/..."],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_compatibility",
     hdrs = [
         "compatibility.h",
     ],
-    copts = micro_copts(),
 )
 
-cc_library(
+tflm_cc_library(
     # TODO(b/187093492): Rename to micro_interpreter.
     name = "micro_framework",
     srcs = [
@@ -35,7 +37,6 @@ cc_library(
     hdrs = [
         "micro_interpreter.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":memory_helpers",
         ":micro_allocator",
@@ -53,7 +54,7 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_context",
     srcs = [
         "micro_context.cc",
@@ -61,16 +62,17 @@ cc_library(
     hdrs = [
         "micro_context.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":micro_common",
         ":micro_graph",
         ":micro_log",
+        ":micro_profiler",
         "//tensorflow/lite/c:common",
+        "//tensorflow/lite:type_to_tflitetype",
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_interpreter_context",
     srcs = [
         "micro_interpreter_context.cc",
@@ -78,7 +80,6 @@ cc_library(
     hdrs = [
         "micro_interpreter_context.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":memory_helpers",
         ":micro_allocator",
@@ -90,18 +91,17 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_common",
     hdrs = [
         "micro_common.h",
     ],
-    copts = micro_copts(),
     deps = [
         "//tensorflow/lite/c:common",
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "fake_micro_context",
     srcs = [
         "fake_micro_context.cc",
@@ -109,7 +109,6 @@ cc_library(
     hdrs = [
         "fake_micro_context.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":memory_helpers",
         ":micro_arena_constants",
@@ -121,10 +120,9 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_graph",
     hdrs = ["micro_graph.h"],
-    copts = micro_copts(),
     deps = [
         ":micro_common",
         ":micro_resource_variable",
@@ -132,11 +130,10 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_interpreter_graph",
     srcs = ["micro_interpreter_graph.cc"],
     hdrs = ["micro_interpreter_graph.h"],
-    copts = micro_copts(),
     deps = [
         ":memory_helpers",
         ":micro_allocator",
@@ -152,11 +149,10 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "mock_micro_graph",
     srcs = ["mock_micro_graph.cc"],
     hdrs = ["mock_micro_graph.h"],
-    copts = micro_copts(),
     deps = [
         ":micro_allocator",
         ":micro_graph",
@@ -166,9 +162,10 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_allocator",
     srcs = [
+        "compression.h",
         "micro_allocation_info.cc",
         "micro_allocator.cc",
     ],
@@ -176,7 +173,6 @@ cc_library(
         "micro_allocation_info.h",
         "micro_allocator.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":flatbuffer_utils",
         ":memory_helpers",
@@ -190,6 +186,7 @@ cc_library(
         "//tensorflow/lite/micro/arena_allocator:non_persistent_arena_buffer_allocator",
         "//tensorflow/lite/micro/arena_allocator:persistent_arena_buffer_allocator",
         "//tensorflow/lite/micro/arena_allocator:simple_memory_allocator",
+        "//tensorflow/lite/micro/compression:metadata_saved",
         "//tensorflow/lite/micro/memory_planner:greedy_memory_planner",
         "//tensorflow/lite/micro/memory_planner:linear_memory_planner",
         "//tensorflow/lite/micro/memory_planner:micro_memory_planner",
@@ -200,20 +197,18 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_arena_constants",
     hdrs = [
         "micro_arena_constants.h",
     ],
-    copts = micro_copts(),
     deps = [],
 )
 
-cc_library(
+tflm_cc_library(
     name = "flatbuffer_utils",
     srcs = ["flatbuffer_utils.cc"],
     hdrs = ["flatbuffer_utils.h"],
-    copts = micro_copts(),
     deps = [
         "//tensorflow/lite/c:common",
         "//tensorflow/lite/schema:schema_fbs",
@@ -221,11 +216,10 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "memory_helpers",
     srcs = ["memory_helpers.cc"],
     hdrs = ["memory_helpers.h"],
-    copts = micro_copts(),
     deps = [
         "//tensorflow/lite/c:common",
         "//tensorflow/lite/kernels/internal:reference",
@@ -235,7 +229,7 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "test_helpers",
     srcs = [
         "test_helper_custom_ops.cc",
@@ -245,7 +239,6 @@ cc_library(
         "test_helper_custom_ops.h",
         "test_helpers.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":memory_helpers",
         ":micro_utils",
@@ -260,7 +253,7 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "op_resolvers",
     srcs = [
         "micro_op_resolver.cc",
@@ -269,7 +262,6 @@ cc_library(
         "micro_mutable_op_resolver.h",
         "micro_op_resolver.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":micro_compatibility",
         ":micro_log",
@@ -283,7 +275,7 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "debug_log",
     srcs = [
         "debug_log.cc",
@@ -291,10 +283,9 @@ cc_library(
     hdrs = [
         "debug_log.h",
     ],
-    copts = micro_copts(),
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_log",
     srcs = [
         "micro_log.cc",
@@ -302,13 +293,12 @@ cc_library(
     hdrs = [
         "micro_log.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":debug_log",
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_resource_variable",
     srcs = [
         "micro_resource_variable.cc",
@@ -316,7 +306,6 @@ cc_library(
     hdrs = [
         "micro_resource_variable.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":micro_allocator",
         ":micro_log",
@@ -326,7 +315,7 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_time",
     srcs = [
         "micro_time.cc",
@@ -334,19 +323,18 @@ cc_library(
     hdrs = [
         "micro_time.h",
     ],
-    copts = micro_copts() + ["-DTF_LITE_USE_CTIME"],
+    copts = tflm_copts() + ["-DTF_LITE_USE_CTIME"],
     deps = ["//tensorflow/lite/c:common"],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_profiler_interface",
     hdrs = [
         "micro_profiler_interface.h",
     ],
-    copts = micro_copts(),
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_profiler",
     srcs = [
         "micro_profiler.cc",
@@ -354,7 +342,6 @@ cc_library(
     hdrs = [
         "micro_profiler.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":micro_compatibility",
         ":micro_log",
@@ -364,7 +351,7 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "micro_utils",
     srcs = [
         "micro_utils.cc",
@@ -372,7 +359,6 @@ cc_library(
     hdrs = [
         "micro_utils.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":memory_helpers",
         ":micro_log",
@@ -381,7 +367,21 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
+    name = "hexdump",
+    srcs = [
+        "hexdump.cc",
+    ],
+    hdrs = [
+        "hexdump.h",
+    ],
+    deps = [
+        ":span",
+        ":static_vector",
+    ],
+)
+
+tflm_cc_library(
     name = "recording_allocators",
     srcs = [
         "recording_micro_allocator.cc",
@@ -390,7 +390,6 @@ cc_library(
         "recording_micro_allocator.h",
         "recording_micro_interpreter.h",
     ],
-    copts = micro_copts(),
     deps = [
         ":micro_allocator",
         ":micro_compatibility",
@@ -401,22 +400,20 @@ cc_library(
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "span",
     hdrs = ["span.h"],
-    copts = micro_copts(),
 )
 
-cc_library(
+tflm_cc_library(
     name = "static_vector",
     hdrs = ["static_vector.h"],
-    copts = micro_copts(),
     deps = [
         "//tensorflow/lite/kernels:op_macros",
     ],
 )
 
-cc_library(
+tflm_cc_library(
     name = "system_setup",
     srcs = [
         "system_setup.cc",
@@ -424,10 +421,9 @@ cc_library(
     hdrs = [
         "system_setup.h",
     ],
-    copts = micro_copts(),
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_log_test",
     srcs = [
         "micro_log_test.cc",
@@ -439,7 +435,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_mutable_op_resolver_test",
     srcs = [
         "micro_mutable_op_resolver_test.cc",
@@ -451,7 +447,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_interpreter_context_test",
     srcs = [
         "micro_interpreter_context_test.cc",
@@ -465,7 +461,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "fake_micro_context_test",
     srcs = [
         "fake_micro_context_test.cc",
@@ -479,7 +475,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_interpreter_test",
     srcs = [
         "micro_interpreter_test.cc",
@@ -496,7 +492,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_allocator_test",
     srcs = [
         "micro_allocator_test.cc",
@@ -514,7 +510,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_allocation_info_test",
     srcs = [
         "micro_allocation_info_test.cc",
@@ -526,7 +522,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "recording_micro_allocator_test",
     srcs = [
         "recording_micro_allocator_test.cc",
@@ -541,7 +537,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "flatbuffer_utils_test",
     srcs = [
         "flatbuffer_utils_test.cc",
@@ -556,7 +552,19 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
+    name = "hexdump_test",
+    size = "small",
+    srcs = [
+        "hexdump_test.cc",
+    ],
+    deps = [
+        ":hexdump",
+        "//tensorflow/lite/micro/testing:micro_test",
+    ],
+)
+
+tflm_cc_test(
     name = "memory_helpers_test",
     srcs = [
         "memory_helpers_test.cc",
@@ -568,7 +576,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "span_test",
     size = "small",
     srcs = [
@@ -580,7 +588,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "testing_helpers_test",
     srcs = [
         "testing_helpers_test.cc",
@@ -592,7 +600,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_utils_test",
     srcs = [
         "micro_utils_test.cc",
@@ -603,7 +611,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_time_test",
     srcs = [
         "micro_time_test.cc",
@@ -614,7 +622,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "micro_resource_variable_test",
     srcs = ["micro_resource_variable_test.cc"],
     deps = [
@@ -623,7 +631,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "memory_arena_threshold_test",
     srcs = [
         "memory_arena_threshold_test.cc",
@@ -637,7 +645,7 @@ cc_test(
     ],
 )
 
-cc_test(
+tflm_cc_test(
     name = "static_vector_test",
     size = "small",
     srcs = [
