--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,32 @@ jobs:
         run: |
           tensorflow/lite/micro/tools/ci_build/test_bazel_asan.sh
 
+  # TODO(b/178621680): enable ubsan once bazel + clang + ubsan errors are fixed.
+  # bazel_ubsan:
+  #   runs-on: ubuntu-latest
+  #
+  #   name: Bazel ubsan (presubmit)
+  #   steps:
+  #     - uses: actions/setup-python@v4
+  #       with:
+  #         python-version: '3.10'
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         ref: ${{ inputs.trigger-sha }}
+  #     - name: Install dependencies
+  #       run: |
+  #         sudo ci/install_bazelisk.sh
+  #         pip3 install Pillow
+  #         pip3 install numpy
+  #     - name: Fix kernel mmap rnd bits
+  #       # Asan in llvm 14 provided in ubuntu 22.04 is incompatible with
+  #       # high-entropy ASLR in much newer kernels that GitHub runners are
+  #       # using leading to random crashes: https://reviews.llvm.org/D148280
+  #       run: sudo sysctl vm.mmap_rnd_bits=28
+  #     - name: Test
+  #       run: |
+  #         tensorflow/lite/micro/tools/ci_build/test_bazel_ubsan.sh
+
   cortex_m_bluepill_release:
     runs-on: ubuntu-latest
 
