--- a/python/tests/BUILD
+++ b/python/tests/BUILD
@@ -4,6 +4,9 @@ cc_test(
     srcs = [
         "cc_deps_link_test.cc",
     ],
+    tags = [
+        "nomsan",  # avoid, because tensorflow library fails msan
+    ],
     deps = [
         "@tensorflow_cc_deps//:cc_library",
     ],
