--- a/.github/workflows/cortex_m_arm_compiler.yml
+++ b/.github/workflows/cortex_m_arm_compiler.yml
@@ -6,8 +6,6 @@
 
 name: Cortex-M / Arm Compiler 6 
 on:
-  schedule:
-    - cron: '0 4 * * *'
 
   # Allow manually triggering of the workflow.
   workflow_dispatch: {}
@@ -41,11 +39,13 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.trigger-sha }}
 
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - uses: actions/checkout@v2
+
       - name: Install dependencies
         run: |
           pip3 install Pillow
@@ -75,10 +75,16 @@ jobs:
 
     name: Cortex-M Corstone 300 (FVP)
     steps:
+
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.trigger-sha }}
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - uses: actions/checkout@v2
+
       - name: Install dependencies
         run: |
           pip3 install Pillow
