--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,26 @@ jobs:
         run: |
           tensorflow/lite/micro/tools/ci_build/test_bazel.sh
 
+  bazel_tests_with_compression:
+    runs-on: ubuntu-latest
+
+    name: Bazel with Compression (presubmit)
+    steps:
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.trigger-sha }}
+      - name: Install dependencies
+        run: |
+          sudo ci/install_bazelisk.sh
+          pip3 install Pillow
+          pip3 install numpy
+      - name: Test
+        run: |
+          tensorflow/lite/micro/tools/ci_build/test_bazel_with_compression.sh
+
   bazel_msan:
     runs-on: ubuntu-latest
 
@@ -65,6 +85,31 @@ jobs:
         run: |
           tensorflow/lite/micro/tools/ci_build/test_bazel_msan.sh
 
+  bazel_with_compression_msan:
+    runs-on: ubuntu-latest
+
+    name: Bazel with Compression [msan] (presubmit)
+    steps:
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.trigger-sha }}
+      - name: Install dependencies
+        run: |
+          sudo ci/install_bazelisk.sh
+          pip3 install Pillow
+          pip3 install numpy
+      - name: Fix kernel mmap rnd bits
+        # Asan in llvm 14 provided in ubuntu 22.04 is incompatible with
+        # high-entropy ASLR in much newer kernels that GitHub runners are
+        # using leading to random crashes: https://reviews.llvm.org/D148280
+        run: sudo sysctl vm.mmap_rnd_bits=28
+      - name: Test
+        run: |
+          tensorflow/lite/micro/tools/ci_build/test_bazel_with_compression_msan.sh
+
   bazel_asan:
     runs-on: ubuntu-latest
 
@@ -89,6 +134,32 @@ jobs:
       - name: Test
         run: |
           tensorflow/lite/micro/tools/ci_build/test_bazel_asan.sh
+
+  bazel_with_compression_asan:
+    runs-on: ubuntu-latest
+
+    name: Bazel with Compression [asan] (presubmit)
+    steps:
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.trigger-sha }}
+      - name: Install dependencies
+        run: |
+          sudo ci/install_bazelisk.sh
+          pip3 install Pillow
+          pip3 install numpy
+      - name: Fix kernel mmap rnd bits
+        # Asan in llvm 14 provided in ubuntu 22.04 is incompatible with
+        # high-entropy ASLR in much newer kernels that GitHub runners are
+        # using leading to random crashes: https://reviews.llvm.org/D148280
+        run: sudo sysctl vm.mmap_rnd_bits=28
+      - name: Test
+        run: |
+          tensorflow/lite/micro/tools/ci_build/test_bazel_with_compression_asan.sh
+
 
   # TODO(b/178621680): enable ubsan once bazel + clang + ubsan errors are fixed.
   # bazel_ubsan:
